# sdlgui

./: .gitignore  CMakeLists.txt  README.md  main.cpp  skin.xcf
gui/: components.h  default_theme.h  factory.cpp  factory.h  gui.cpp  gui.h  layout.h  theme.cpp  theme.h  widget.cpp  widget.h  widget_type.h  widget_visitor.h
gui/components/: button.cpp  button.h
gui/layout/: vbox.cpp  vbox.h
